@@ -12,6 +12,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/1477[#1477]: IDEasy cannot create link to file on Windows
 * https://github.com/devonfw/IDEasy/issues/1221[#1221]: Improve Windows terminal integration on installation
 * https://github.com/devonfw/IDEasy/issues/1460[#1460]: Prevent strange ansi-codes in logs
+* https://github.com/devonfw/IDEasy/issues/1484[#1484]: Broken error handling: Couldn't uninstall node.
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/34?closed=1[milestone 2025.09.001].
 
